<resources>
    <string name="app_name">NikeStore</string>
    <string name="home">خانه</string>
    <string name="profile">اطلاعات کاربری</string>
    <string name="card">سبد خرید</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="last_product">آخرین محصولات</string>
    <string name="popular_product">پر فروش ترین</string>
    <string name="view_all">مشاهده همه</string>
    <string name="comments">نظرات کاربران</string>
    <string name="insertComment">ثبت نظر</string>
    <string name="viewAllComments">مشاهده همه نظرات</string>
    <string name="comment">نظرات کاربران</string>
    <string name="productList">لیست محصولات</string>
    <string name="sort">مرتب سازی</string>
    <string name="sortLatest">جدیدترین</string>
    <string name="sortPopular">پربازدیدترین</string>
    <string name="sortPriceHighToLow">گران ترین</string>
    <string name="sortPriceLowToHigh">ارزان ترین</string>
    <string name="addToCart">افزودن به سبد خرید</string>
    <string name="unKnown_error">خطای نا مشخص</string>
    <string name="pageLogin">صفحه ورود به اپلیکیشن</string>
    <string name="pageRegister">صفحه ثبت نام اپلیکیشن</string>
    <string name="enterEmailAndPass">ایمیل و رمزعبور را وارد کنید</string>
    <string name="email">ایمیل</string>
    <string name="pass">رمزعبور</string>
    <string name="noHaveAccount">اکانت کاربری ندارید؟</string>
    <string name="haveAccount">حساب کاربری دارید؟</string>
    <string name="login">ورود کنید</string>
    <string name="register">ثبت نام کنید</string>
    <string name="loginBtn">ورود</string>
    <string name="registerBtn">ثبت نام</string>
    <string name="error_email_edt">ایمیل نباید خالی باشد</string>
    <string name="error_pass_edt">رمزعبور نباید خالی باشد</string>
    <string name="no_match_email">کلمه وارد شده ایمیل نیست!</string>
    <string name="cart">سبد خرید</string>
    <string name="count">تعداد</string>
    <string name="removeFromCart">حذف از سبد خرید</string>
    <string name="purchaseDetail">جزییات خرید</string>
    <string name="totalPrice">مبلغ کل خرید</string>
    <string name="shippingCost">هزینه ارسال</string>
    <string name="payablePrice">مبلغ قابل پرداخت</string>
    <string name="pay">پرداخت</string>
    <string name="cartEmptyStateLoginRequired">وارد حساب کاربری خود شوید</string>
    <string name="cartEmptyStateCallToAction">ورود به حساب کاربری</string>
    <string name="cartEmptyState">هیچ خبری اینجا نیست!</string>
    <string name="firstName">نام</string>
    <string name="lastName">نام خانوادگی</string>
    <string name="postalCode">کد پستی</string>
    <string name="phoneNumber">شماره موبایل</string>
    <string name="address">آدرس</string>
    <string name="checkoutToolbarTitle">رسید پرداخت</string>
    <string name="returnHome">بازگشت به صفحه اصلی</string>
    <string name="orderHistory">سوابق سفارش</string>
    <string name="purchaseStatus">وضعیت سفارش</string>
    <string name="price">مبلغ</string>
    <string name="onlinePayment">پرداخت اینترنتی</string>
    <string name="cashOnDelivery">پرذاخت در محل</string>
    <string name="shippingToolbarTitle">انتخاب تحویل گیرنده و شیوه پرداخت</string>
    <string name="favorites">لیست علاقه مندی ها</string>
    <string name="signIn">ورود به حساب کاربری</string>
    <string name="signOut">خروج از حساب کاربری</string>
    <string name="guest_user">کاربر مهمان</string>
    <string name="emptyStateFavorite">هنوز چیزی به لیست علاقمندی اضافه نکردی</string>
    <string name="helpFavorite">برای حذف کردن ایتم دست خود را روی ان نگه دارید</string>

    <string-array name="sortArray">
        <item>@string/sortLatest</item>
        <item>@string/sortPopular</item>
        <item>@string/sortPriceHighToLow</item>
        <item>@string/sortPriceLowToHigh</item>
    </string-array>

</resources>